--- a/src/pages/Main/styles.css
+++ b/src/pages/Main/styles.css
@@ -1,10 +1,9 @@
 .mn-container {
-  min-height: 100%;
+  min-height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100%;
 }
 
 .mn-content {
