--- a/src/sections/Common/Footer/styles.css
+++ b/src/sections/Common/Footer/styles.css
@@ -26,7 +26,7 @@
   position: absolute;
   width: 50%;
   right: 1.5rem;
-  top: 10%;
+  top: 20%;
   right: 2.5%;
   font-size: 0.9rem;
 }
@@ -38,7 +38,7 @@
   clip-path: inset(0px 0px 6rem 2.5rem);
 }
 
-@media only screen and (max-width: 360px) {
+@media only screen and (max-width: 380px) {
   .ft-container img {
     width: 20rem;
     margin-top: 2rem;
@@ -46,6 +46,7 @@
 
   .ft-container p {
     font-size: 0.85rem;
+    right: 1rem;
   }
 }
 
@@ -59,8 +60,8 @@
 
   .ft-container p {
     font-size: 1.25rem;
-    right: 10%;
-    top: 20%;
+    /*right: 10%;
+    top: 20%;*/
   }
 
   .ft-container {
